--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 PORT = 5000
-MONGO_URI = mongodb+srv://babulkumar527:5ZhVTaAJPh4EOvWa@cluster0.zooywyk.mongodb.net/?retryWrites=true&w=majority
+MONGO_URI = 127.0.0.1:27017/viratKart
 JWT_KEY = jdssssfgfkj
 NODE_ENV = production
