--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 PORT = 5000
-MONGO_URI = mongodb://127.0.0.1:27017/viratKart
+MONGO_URI = mongodb+srv://babulkumar527:iQZZuxayDRrgXWgx@cluster0.3jiada1.mongodb.net/?retryWrites=true&w=majority
 JWT_KEY = jdssssfgfkj
 NODE_ENV = production
