--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 PORT = 5000
-MONGO_URI = mongodb+srv://babulkumar527:iQZZuxayDRrgXWgx@cluster0.3jiada1.mongodb.net/?retryWrites=true&w=majority
-JWT_KEY = jdssssfgfkj
-NODE_ENV = production
+MONGO_URI = put your mongodb url
+JWT_KEY = set your jwtkey
+# NODE_ENV = production
