--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "node Backend/server.js",
-    "server": "nodemon Backend/server.js",
-    "build": "npm install && npm install --prefix frontend && npm run build --prefix frontend"
+    "server": "nodemon Backend/server.js"
   },
   "author": "virat singh",
   "license": "ISC",
