--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "virat singh",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
     "colors": "^1.4.0",
     "dotenv": "^16.3.1",
